k8s/vista-python-api/base/istio/authorizationpolicy/allow-ingress-authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-vista-python-api
spec:
  selector:
    matchLabels:
      io.kompose.service: vista-python-api
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["PLACE_HOLDER"]
      to:
        - operation:
            methods: ["GET", "POST"]
